Version 0.34 (???)
------------------
* Add ExplicitExports="false" to NuGet .dna file template

Version 0.33 (9 September 2015)
-------------------------------
* Improve RtdObserver/Async array function handling to ensure RTD DisconnectData when complete.
* Suppress CustomUI loading when running embedded with /K switch.
* Fix timer leak in ExcelDnaUtil.QueueAsMacro (incorrect timer id tracking).
* Allow CommandBars find by Id.
* Save source files as binary when packing.
* Add further workaround for RTD bugs in Excel 2010 RTM.
* Fix memory leak where on-demand registered RTD servers were not garbage collected after ServerTerminate().
* Change COM registrations (for RTD, ribbon and CTP) to always try machine hive first, before falling back to user hive.
* Allow byte[] as parameters key in ExcelRtdObservable, to support storing only an opaque hash instead of the full parameter set.
* Fix race condition between ExcelRtdObserver.OnNext(), DateTime.ToOADateTime() and Excel calling RefreshData().
* Fix integer return type with IsExceptionSafe=true crashes in marshaling.
* Update ExcelReference to allow immutable use, mark AddRectangle mutator Obsolete. Add operator== to AsyncCallInfo.
* Increase number of exports to 10,000.
* Implement logging mechanism based on System.Diagnostics.Trace.
* Add CreateCustomTask overloads that take the control explicitly.
* Clean up ExcelReference internals to only keep extra array of rectangles if needed.
* Improve RTD and async exception handling for damaged Excel installs.
* Fix NuGet package paths to use macros when packages are under solution folder.
* Fix NuGet package install for F# on VS 2015.

Version 0.32 (3 May 2014)
-------------------------
* BREAKING CHANGE: Modify rounding conversions for the integral parameter types to match VBA convention. Affects UInt16, Int16, Int32, Int64 and Boolean.
* Fix method registration to avoid generic methods (for F# standalone).